Bug 52313 - r600g: Linux 3.3.x broken since 30257c32
Summary: r600g: Linux 3.3.x broken since 30257c32
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-20 14:37 UTC by Stefan Dösinger
Modified: 2012-09-03 11:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Stefan Dösinger 2012-07-20 14:37:04 UTC
Since Mesa commit 30257c32910c3f7ac2b9cc24399d6be196d34d26 r600g fails to render anything on Linux 3.3 and probably all earlier versions. An upgrade to 3.4 fixes the issue.

The output from glxinfo is:
radeon: The kernel rejected CS, see dmesg for more information.

This is accompanied by the following lines in dmesg:
[199859.400626] radeon 0000:01:00.0: forbidden register 0x00028b28 at 188
[199859.400628] [drm:radeon_cs_ib_chunk] *ERROR* Invalid command stream !

My understanding is that Mesa is intended to remain backwards compatible with older kernels. If this is not the case feel free to close the bug.
Comment 1 Jerome Glisse 2012-07-20 15:23:18 UTC
Fixed in mesa master
Comment 2 Andreas Boll 2012-09-03 11:23:46 UTC
(In reply to comment #1)
> Fixed in mesa master

Marking this bug as fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.