r600g: don't emit forbidden reg with old kernel on evergreen

Fix https://bugs.freedesktop.org/show_bug.cgi?id=52313

Signed-off-by: Jerome Glisse <jglisse@redhat.com>